--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@18xx-maker/games",
-  "version": "3.1.3",
+  "version": "4.0.0-0",
   "description": "Game and tile files for 18xx-maker",
   "main": "index.js",
   "repository": "https://github.com/18xx-maker/games",
