--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@18xx-maker/schemas": "^4.3.0",
     "handlebars": "^4.7.6",
-    "husky": ">=4",
-    "lint-staged": ">=10",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   },
